# R-dacteur-Assist-par-un-syst-me-Multi-agent

./: .gitignore  README.md  llm_trends_2025.json  pyproject.toml  report.json
src/redacteur/: crew.py  main.py
src/redacteur/config/: agents.yaml  tasks.yaml
