[project]
name = "redacteur"
version = "0.1.0"
description = "redacteur using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
redacteur = "redacteur.main:run"
run_crew = "redacteur.main:run"
train = "redacteur.main:train"
replay = "redacteur.main:replay"
test = "redacteur.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
